Fix nav spacing

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -453,6 +453,7 @@ nav {
   }
   ul {
     list-style: none;
+    margin: 0;
     padding: 0;
     display: flex;
     flex-wrap: wrap;
